cli/tests/snapshot/snapshots/snapshot__convert_stderr_json.foo.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: could not determine format of input file `[INPUTS_PATH]/convert/json.foo`
