cli/tests/snapshot/snapshots/snapshot__convert_stdout_json.txt.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
"{\n  \"foo\": [1, 2],\n  \"bar\": {}\n}\n"
