cli/tests/snapshot/snapshots/snapshot__convert_stdout_toml.toml.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
{ foo = { bar = [ 1, 2 ] }, baz = [ { hi = "bye" } ] }
