cli/tests/snapshot/snapshots/snapshot__doc_stdout_evaluation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
{"foo":{"fields":null,"type":null,"contracts":["{ x | Dyn, y, }"],"documentation":null}}
