cli/tests/snapshot/snapshots/snapshot__doc_stdout_recursive.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
# `Recursive`

## `bar`

- `bar | Recursive`

## `foo`

- `foo | Number`
