cli/tests/snapshot/snapshots/snapshot__doc_stdout_recursive_false_positive.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
# `outer`

## `mid`

### `inner`

this is inner

## `z`

this is z

### `inner`

this is inner
