cli/tests/snapshot/snapshots/snapshot__doc_stdout_types.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: out
---
# `Hello`

- `Hello : Number`
- `Hello | std.string.Stringable`
World\!
