cli/tests/snapshot/snapshots/snapshot__error_stderr_array_at_empty_array.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `at`: invalid array indexing
    ┌─ <stdlib/std.ncl>:162:9
    │
162 │       | std.contract.unstable.IndexedArrayFun
    │         ------------------------------------- expected type
    │
    ┌─ [INPUTS_PATH]/errors/array_at_empty_array.ncl:3:16
    │
  3 │ std.array.at 0 []
    │                -- evaluated to this expression
    │
    ┌─ <unknown> (generated by evaluation):1:1
    │
  1 │ [ ... ]
    │ ------- evaluated to this value
    │
    = Can't index into an empty array

note: 
  ┌─ [INPUTS_PATH]/errors/array_at_empty_array.ncl:3:1
  │
3 │ std.array.at 0 []
  │ ----------------- (1) calling at


