cli/tests/snapshot/snapshots/snapshot__error_stderr_array_at_out_of_bound.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `at`: invalid array indexing
    ┌─ <stdlib/std.ncl>:162:9
    │
162 │       | std.contract.unstable.IndexedArrayFun
    │         ------------------------------------- expected type
    │
    ┌─ [INPUTS_PATH]/errors/array_at_out_of_bound.ncl:3:16
    │
  3 │ std.array.at 2 [1]
    │                --- evaluated to this expression
    │
    ┌─ <unknown> (generated by evaluation):1:1
    │
  1 │ [ ... ]
    │ ------- evaluated to this value
    │
    = Expected an array index between 0 and 0 (included), got 2

note: 
  ┌─ [INPUTS_PATH]/errors/array_at_out_of_bound.ncl:3:1
  │
3 │ std.array.at 2 [1]
  │ ------------------ (1) calling at


