cli/tests/snapshot/snapshots/snapshot__error_stderr_array_merge_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value: cannot merge unequal arrays
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ (contract.Equal) some_array
  │ --------------------------- expected type
  │
  ┌─ [INPUTS_PATH]/errors/array_merge_fail.ncl:4:12
  │
4 │ foo & [1,2,4]
  │            - evaluated to this expression
  │
  = This equality contract was auto-generated from a merge operation on two arrays. Arrays can only be merged if they are equal.


